SAR Blai Sandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Responsable_contacto__c</fullName>
        <label>Responsable contacto</label>
        <picklist>
            <picklistValues>
                <fullName>Administración y finanzas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADOREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultas externas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control de gestión</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DG. Finanzas, RRHH y Jurídico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DG. Soporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT  Residencias Baleares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT  Residencias Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Residencias Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Residencias  Navarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Residencias Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Residencias Oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT  Residencias Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I+D+i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraestructuras y facilites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juridico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organización y Sistemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presidencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRHH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARDomus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rincon_del_Juguete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rincón del Juguete (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sala_de_Actividades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sala de Actividades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sala_de_juegos__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sala de juegos en la que se pueden desarrollar  actividades personales o en grupo</description>
        <inlineHelpText>Sala de juegos en la que se pueden desarrollar  actividades personales o en grupo</inlineHelpText>
        <label>Sala de juegos (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salas_comunes_en_Planta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salas comunes en Planta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salas_de_estar__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Salas de estar con prensa y televisión</description>
        <inlineHelpText>Salas de estar con prensa y televisión</inlineHelpText>
        <label>Salas de estar (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salas_para_las_visitas__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Salas especialmente acondicionadas para las visitas</description>
        <inlineHelpText>Salas especialmente acondicionadas para las visitas</inlineHelpText>
        <label>Salas para las visitas (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sectorizacion_por_grados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sectorización por grados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sede_o_Delegaci_n__c</fullName>
        <label>Sede o Delegación</label>
        <picklist>
            <picklistValues>
                <fullName>Sede Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seleccion_del_cargo_del_responsable__c</fullName>
        <description>Selección del cargo del responsable que entrega el Plan (llevará asociado el nombre).</description>
        <inlineHelpText>Selección del cargo del responsable que entrega el Plan (llevará asociado el nombre).</inlineHelpText>
        <label>Selección del cargo del responsable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicio_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio 1</label>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicio_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio 2</label>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Cuentas (Servicio 2)</relationshipLabel>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicio_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio 3</label>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Cuentas (Servicio 3)</relationshipLabel>
        <relationshipName>Cuentas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicio_Medico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servicio Médico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicio_de_atencion_a_sugerencias__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Servicio atención a sugerencias (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicio_de_atencion_familiar__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Servicio de atención familiar y encuentros periódicos con la familia</description>
        <inlineHelpText>Servicio de atención familiar y encuentros periódicos con la familia</inlineHelpText>
        <label>Servicio de atención familiar (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicio_de_enfermeria_24h__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servicio de enfermería 24h (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicio_de_enfermeria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servicio de enfermería (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicio_de_fin_de_semana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Servicio de fin de semana (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicios_adicionales_de_peluqueria__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Servicios adicionales de peluquería, manicura y podología profesional</description>
        <inlineHelpText>Servicios adicionales de peluquería, manicura y podología profesional</inlineHelpText>
        <label>Servicios adicionales peluquería (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicios_prof_incl_en_tarifa__c</fullName>
        <label>Servicios prof incl en tarifa</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Servicios_religiosos__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Servicios religiosos (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <label>Sexo</label>
        <picklist>
            <picklistValues>
                <fullName>Hombre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sistema_de_aviso_24h__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sistema de aviso en la habitación 24 horas.</description>
        <inlineHelpText>Sistema de aviso en la habitación 24 horas.</inlineHelpText>
        <label>Sistema de aviso 24h (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Situacion_economica__c</fullName>
        <label>Situación económica</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sociedad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sociedad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe5AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Centros Residenciales</relationshipLabel>
        <relationshipName>Sociedad</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suite_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sur_Occidental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sur Occidental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sur_Oriental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sur Oriental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tableta_1__c</fullName>
        <description>Identificador del número de la tableta</description>
        <inlineHelpText>Identificador del número de la tableta</inlineHelpText>
        <label>ID Tableta 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tableta_2__c</fullName>
        <description>Identificador del número de la tableta</description>
        <inlineHelpText>Identificador del número de la tableta</inlineHelpText>
        <label>ID Tableta 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tableta_3__c</fullName>
        <description>Identificador del número de la tableta</description>
        <inlineHelpText>Identificador del número de la tableta</inlineHelpText>
        <label>ID Tableta 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talleres_de_memoria__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Talleres de memoria y terapias de estimulación cognitiva y ocupacional.</description>
        <inlineHelpText>Talleres de memoria y terapias de estimulación cognitiva y ocupacional.</inlineHelpText>
        <label>Talleres de memoria (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tarifa_por_grados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarifa por grados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono_2__c</fullName>
        <label>Teléfono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_3__c</fullName>
        <label>Telefono 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_4__c</fullName>
        <label>Telefono 4</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Terapeuta_Ocupacional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terapeuta Ocupacional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terrazas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Terrazas especialmente pensadas para disfrutar del aire libre</description>
        <inlineHelpText>Terrazas especialmente pensadas para disfrutar del aire libre</inlineHelpText>
        <label>Terrazas (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terrazas_jardines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terrazas, jardines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tintoreria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Servicios de arreglos especiales de ropa. Tintoreria.</description>
        <inlineHelpText>Servicios de arreglos especiales de ropa. Tintoreria.</inlineHelpText>
        <label>Tintoreria (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_Documento_Identidad__c</fullName>
        <label>Tipo Documento Identidad</label>
        <picklist>
            <picklistValues>
                <fullName>DNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasaporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documento de residencia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Documento_Sanitario__c</fullName>
        <label>Tipo Documento Sanitario</label>
        <picklist>
            <picklistValues>
                <fullName>NSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUFACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISFAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_analisis__c</fullName>
        <label>Tipo análisis</label>
        <picklist>
            <picklistValues>
                <fullName>Febrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octubre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_centro__c</fullName>
        <label>Tipo centro</label>
        <picklist>
            <picklistValues>
                <fullName>Público</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Financiacion__c</fullName>
        <label>Tipo de Financiación</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tipo_de_concierto_CD__c</fullName>
        <label>Tipo de concierto CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_concierto_RD__c</fullName>
        <label>Tipo de concierto RD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_fianza__c</fullName>
        <label>Tipo de fianza</label>
        <picklist>
            <picklistValues>
                <fullName>media mensualidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>una mensualidad</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Titular_Fichero_LOPD_del__c</fullName>
        <label>Titular Fichero LOPD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trabajador_Social_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trabajador Social</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transporte_CD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transporte CD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transporte_de_Lunes_a_Viernes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transporte de Lunes a Viernes (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ultima_Mod__c</fullName>
        <label>Última Modificación</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unidad_Alzheimer_Demencias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unidad Alzheimer/Demencias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unidad_Transtornos_Conductuales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unidad Transtornos Conductuales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utiliza_firma_biometrica__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Utilización la firma biométrica para la generación del contrato.</description>
        <inlineHelpText>Utilizar la firma biométrica para generar el contrato?</inlineHelpText>
        <label>Utiliza firma biométrica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valoracion_geriatrica_integral__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Valoración geriátrica integral (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valoracion_satisfaccion_visita_realizada__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Del 1 al 10</inlineHelpText>
        <label>Valoración satisfacción visita realizada</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WiFi__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WiFi (RD-CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zona_Comercial_TA__c</fullName>
        <label>Zona Comercial TA</label>
        <picklist>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nacional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zona_Comercial_del__c</fullName>
        <label>Zona Comercial Centro</label>
        <picklist>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallorca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Occidental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Oriental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zaragoza</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zona_Territorial__c</fullName>
        <inlineHelpText>Campo obligatorio si no es una sede central</inlineHelpText>
        <label>Zona Territorial</label>
        <picklist>
            <picklistValues>
                <fullName>Baleares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zona_comercial__c</fullName>
        <inlineHelpText>Informar como mínimo una zona comercial si no es una sede central</inlineHelpText>
        <label>Zona Comercial RES</label>
        <picklist>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallorca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Occidental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Oriental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zaragoza</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>consultas_medicas_externas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Servicio de consultas médicas externas.</description>
        <inlineHelpText>Servicio de consultas médicas externas.</inlineHelpText>
        <label>consultas médicas externas (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>idEntidadrecomendadora__c</fullName>
        <formula>Empresa_recomendadora__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>idEntidadrecomendadora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>logo__c</fullName>
        <label>logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>passVidsigner__c</fullName>
        <description>Contraseña de suscripción del centro a VidSigner</description>
        <label>passVidsigner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pernoctacion_espordica_en_el_centro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Posibilidad de pernoctación esporádica en el centro.</description>
        <inlineHelpText>Posibilidad de pernoctación esporádica en el centro.</inlineHelpText>
        <label>pernoctación esporádica en  centro (CD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>podologia_profesional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Un servicio al mes de podología profesional en el propio centro adaptado a sus necesidades.</description>
        <inlineHelpText>Un servicio al mes de podología profesional en el propio centro adaptado a sus necesidades.</inlineHelpText>
        <label>podología profesional (RD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>userVidsigner__c</fullName>
        <description>User de la suscripción a VidSigner</description>
        <label>userVidsigner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas Las cuentas</label>
    </listViews>
    <listViews>
        <fullName>Ayuntamiento_BCN</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Recomendador,PersonAccount.PersonAccount,PersonAccount.Contacto_Recomendador</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>ayuntamiento barcelona</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>ajuntament barcelona</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>ayuntamiento de barcelona</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>ajuntament de barcelona</value>
        </filters>
        <label>Ayuntamiento BCN</label>
    </listViews>
    <listViews>
        <fullName>Centros_Sq</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tipo_centro__c</columns>
        <columns>IdNAV__c</columns>
        <columns>ATC_Zona__c</columns>
        <columns>Activo__c</columns>
        <columns>Zona_Comercial_del__c</columns>
        <columns>Zona_Territorial__c</columns>
        <columns>Director_del_centro__c</columns>
        <columns>N_Plazas_CD_Privadas_del__c</columns>
        <columns>Calle__c</columns>
        <columns>Provincia__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Sociedad__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Centro</value>
        </filters>
        <filters>
            <field>Activo__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Centros</label>
    </listViews>
    <listViews>
        <fullName>Clientes_SQ</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Residente__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Clientes</label>
    </listViews>
    <listViews>
        <fullName>Clientes_Temporales</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Email_secundario__c</columns>
        <columns>Correo_Electronico__pc</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>IdNAV_CL__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>IdGCR__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Residencial</value>
        </filters>
        <filters>
            <field>Tipo_centro__c</field>
            <operation>equals</operation>
            <value>Privado,Mixto</value>
        </filters>
        <label>Clientes_Temporales</label>
    </listViews>
    <listViews>
        <fullName>Competidores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Calle__c</columns>
        <columns>Ciudad__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Competidor</value>
        </filters>
        <label>Competidores</label>
    </listViews>
    <listViews>
        <fullName>Conciertos</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Concierto</value>
        </filters>
        <label>Conciertos</label>
        <sharedTo>
            <group>Grupo_Administrador</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Entidades_y_contactos_de_baja</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Contacto_Recomendador</value>
        </filters>
        <filters>
            <field>Baja__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contactos de baja</label>
    </listViews>
    <listViews>
        <fullName>Entidades_y_contactos_rec_de_baja2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Empresa_recomendadora__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Clasificacion_tipo_recomendador__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Recomendador,PersonAccount.Contacto_Recomendador</value>
        </filters>
        <filters>
            <field>Baja__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Entidades y contactos rec. de baja</label>
    </listViews>
</CustomObject>